--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,27 @@
 iframe {
   display: none;
 }
+
+html {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  width: 100%;
+  height: 100%;
+  background-color: #09142c;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #c0c1c2;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #c0c1c2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #808080;
+}
+
+.section {
+  color: #fff;
+}
